--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-external-link": "^2.0.0",
     "react-router-dom": "5.1",
     "react-scripts": "4.0.3",
+    "react-select": "^5.3.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
